infra/k8s/04-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nestjs-graphql
  namespace: udb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nestjs-graphql
  template:
    metadata:
      labels:
        app: nestjs-graphql
    spec:
      containers:
        - name: api
          image: sos-udb-nestjs-graphql:latest
          ports:
            - containerPort: 4000
          readinessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 4000
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            limits: { memory: 512Mi, cpu: "1" }
            requests: { memory: 256Mi, cpu: "0.25" }
---
apiVersion: v1
kind: Service
metadata:
  name: nestjs-graphql
  namespace: udb
spec:
  ports:
    - port: 4000
  selector:
    app: nestjs-graphql
