infra/k8s/05-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: udb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: sos-udb-frontend:latest
          ports:
            - containerPort: 3030
          resources:
            limits: { memory: 256Mi, cpu: "0.5" }
            requests: { memory: 128Mi, cpu: "0.1" }
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: udb
spec:
  ports:
    - port: 3030
  selector:
    app: frontend
